[project]
name = "silenceswift"
version = "0.1.0"
description = ""
authors = [
    {name = "Riccardo",email = "github@dickon.it"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "boto3 (>=1.37.8,<2.0.0)",
    "silencewarp (>=0.2.0,<0.3.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "psycopg[binary] (>=3.2.5,<4.0.0)",
    "eventlet (>=0.39.1,<0.40.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
